--- a/models/lane_navigation/code/xgboost_lane_navigation.ipynb
+++ b/models/lane_navigation/code/xgboost_lane_navigation.ipynb
@@ -543,25 +543,25 @@
    },
    "outputs": [],
    "source": [
-    "# from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# Various hyper-parameters to tune\n",
-    "# xgb1 = XGBRegressor()\n",
-    "# parameters = {'nthread':[4], #when use hyperthread, xgboost may become slower\n",
-    "              #'objective':['reg:linear'],\n",
-    "             # 'learning_rate': [.03, 0.05, .07], #so called `eta` value\n",
-    "              #'max_depth': [5, 6, 7],\n",
-    "              #'min_child_weight': [4],\n",
-    "              #'subsample': [0.7],\n",
-    "              #'colsample_bytree': [0.7],\n",
-    "              #'n_estimators': [500]}\n",
+    "xgb1 = XGBRegressor()\n",
+    "parameters = {'nthread':[4], #when use hyperthread, xgboost may become slower\n",
+    "              'objective':['reg:linear'],\n",
+    "              'learning_rate': [.03, 0.05, .07], #so called `eta` value\n",
+    "              'max_depth': [5, 6, 7],\n",
+    "              'min_child_weight': [4],\n",
+    "              'subsample': [0.7],\n",
+    "              'colsample_bytree': [0.7],\n",
+    "              'n_estimators': [500]}\n",
     "\n",
-    "#xgb_grid = GridSearchCV(xgb1, parameters, cv = 2, n_jobs = 5, verbose=True)\n",
+    "xgb_grid = GridSearchCV(xgb1, parameters, cv = 2, n_jobs = 5, verbose=True)\n",
     "\n",
-    "# xgb_grid.fit(X_train, y_train)\n",
+    "xgb_grid.fit(X_train, y_train)\n",
     "\n",
-    "# print(xgb_grid.best_score_)\n",
-    "# print(xgb_grid.best_params_)"
+    "print(xgb_grid.best_score_)\n",
+    "print(xgb_grid.best_params_)"
    ]
   },
   {
